RESOLVED FIXED60229
Workaround iTunes' incorrect registry entry for .m4a extensions.
https://bugs.webkit.org/show_bug.cgi?id=60229
Summary Workaround iTunes' incorrect registry entry for .m4a extensions.
Jer Noble
Reported 2011-05-04 16:28:57 PDT
When iTunes is installed, it adds a registry key: "HKCR\.m4a\Content Type" = "audio/m4a". QuickTime (without iTunes) installs the same registry key as "Content Type" = "audio/x-m4a". QuickTime explicitly does not support "audio/m4a" codecs MIME types on either Mac or Windows, so .m4a files fail to load in WebKit when iTunes is installed.
Attachments
Patch (1.64 KB, patch)
2011-05-04 16:49 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2011-05-04 16:29:48 PDT
Work around this by adding a hard coded entry to the MIME type map of ".m4a"->"audio/x-m4a".
Jer Noble
Comment 2 2011-05-04 16:49:18 PDT
Jer Noble
Comment 3 2011-05-04 16:53:55 PDT
Darin Adler
Comment 4 2011-05-04 17:24:23 PDT
Comment on attachment 92346 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=92346&action=review > Source/WebCore/platform/win/MIMETypeRegistryWin.cpp:100 > mimetypeMap.add("wmlc", "application/vnd.wap.wmlc"); > + mimetypeMap.add("m4a", "audio/x-m4a"); I think the existing list is sorted in alphabetical order by extension.
Jer Noble
Comment 5 2011-05-04 17:28:32 PDT
(In reply to comment #4) > (From update of attachment 92346 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=92346&action=review > > > Source/WebCore/platform/win/MIMETypeRegistryWin.cpp:100 > > mimetypeMap.add("wmlc", "application/vnd.wap.wmlc"); > > + mimetypeMap.add("m4a", "audio/x-m4a"); > > I think the existing list is sorted in alphabetical order by extension. It looks like it's sorted in willy-nilly order. Would you like it to be sorted in alphabetical order?
Jer Noble
Comment 6 2011-05-05 14:16:26 PDT
Comment on attachment 92346 [details] Patch Adding cq+.
WebKit Commit Bot
Comment 7 2011-05-05 14:59:29 PDT
Comment on attachment 92346 [details] Patch Clearing flags on attachment: 92346 Committed r85886: <http://trac.webkit.org/changeset/85886>
WebKit Commit Bot
Comment 8 2011-05-05 14:59:34 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.