2011-05-05  Jer Noble  <jer.noble@apple.com>

Reviewed by Steve Falkenburg.

        Workaround iTunes' incorrect registry entry for .m4a extensions.
        https://bugs.webkit.org/show_bug.cgi?id=60229

        No new tests, as a test already exits for .m4a support (LayoutTests/media/audio-mpeg4-supported.html).
        The test failed to catch this regression because the build bots haven't installed iTunes.

        Add a hard-coded MIME type mapping for 'm4a' -> 'audio/x-m4a'.

        * platform/win/MIMETypeRegistryWin.cpp:
        (WebCore::MIMETypeRegistry::getMIMETypeForExtension):

Canonical link: https://commits.webkit.org/75568@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85886 268f45cc-cd09-0410-ab3c-d52691b4dbfc